[package]
name = "mwalib"
version = "1.10.0"
homepage = "https://github.com/MWATelescope/mwalib"
repository = "https://github.com/MWATelescope/mwalib"
readme = "README.md"
authors = ["Greg Sleap <greg.sleap@curtin.edu.au>",
           "Christopher H. Jordan <christopherjordan87@gmail.com>"]
edition = "2021"
rust-version = "1.81"
resolver = "2"
description = "A library to simplify reading Murchison Widefield Array (MWA) raw visibilities, voltages and metadata."
license = "MPL-2.0"
keywords = ["radioastronomy", "mwa", "astronomy"]
categories = ["science","parsing"]
exclude = ["test_files/*", "tools/*",".github/*"]

[[bin]]
name = "stub_gen"
path = "bin/stub_gen.rs"
doc = false
required-features = ["python", "python-stubgen"]

# Make a rust library, as well as static and C-compatible dynamic libraries
# available as "libmwalib.a" and "libmwalib.so".
[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
# Compile cfitsio from source and link it statically.
cfitsio-static = ["fitsio-sys/fitsio-src"]
# Enable optional features needed by examples.
examples = ["anyhow", "clap", "env_logger"]
# Enable python
python = ["anyhow", "env_logger", "ndarray", "numpy", "pyo3"]
# Enable python-stubgen
python-stubgen = ["ndarray", "numpy", "pyo3", "pyo3-stub-gen", "pyo3-stub-gen-derive", "malachite", "malachite-base", "malachite-nz", "malachite-q"]

[[bench]]
name = "voltage_context_benches"
# don't use path here, it breaks things.
harness = false

[profile.bench]
opt-level = 3

[dependencies]
bytemuck = "=1.24"
chrono = "0.4"
fitsio = "0.21"
fitsio-sys = "0.5"
lazy_static = "1.5"
libc = "0.2"
log = "0.4"
num-derive = "0.4"
num-traits = "0.2"
rayon = "1.11"
regex = "1.12"
thiserror = "2.0"

# "python" and examples features
anyhow = { version = "1.0", optional = true }
env_logger = { version = "0.11", optional = true }

# "python" feature
ndarray = { version = "=0.16.1", optional = true }
numpy = { version = "=0.27", optional = true }
pyo3 = { version = "=0.27.1", features = ["chrono", "extension-module", "macros"], optional = true }

# "python-stubgen" feature
pyo3-stub-gen = { version = "=0.17.1", optional = true }
# Transitive due to latest versions using higher MSRV than mwalib
pyo3-stub-gen-derive = { version = "=0.17.1", optional = true }
malachite = { version = "=0.4.16", optional = true }
malachite-base = { version = "=0.4.16", optional = true }
malachite-nz = { version = "=0.4.16", optional = true }
malachite-q = { version = "=0.4.16", optional = true }

# "examples" feature.
clap = { version = "4.5", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.7"
csv = "1.4"
float-cmp = "0.10"
tempdir = "0.3"

[build-dependencies]
built = "0.8"
cbindgen = { version = "=0.29.2", default-features = false }
# Transitive due to latest versions using higher MSRV than mwalib
indexmap = "=2.11"

[[example]]
name = "mwalib-data-dump"
required-features = ["examples"]

[[example]]
name = "mwalib-print-context"
required-features = ["examples"]

[[example]]
name = "mwalib-print-corr-context"
required-features = ["examples"]

[[example]]
name = "mwalib-print-tile-info"
required-features = ["examples"]

[[example]]
name = "mwalib-print-volt-context"
required-features = ["examples"]

[[example]]
name = "mwalib-sum-gpubox-hdus"
required-features = ["examples"]

[[example]]
name = "mwalib-sum-first-fine-channel-gpubox-hdus"
required-features = ["examples"]
