[project]
name = "mwalib"
repository = "https://github.com/MWATelescope/mwalib"
requires-python = ">=3.7"
dependencies = ["numpy"]

[build-system]
requires = ["setuptools", "python_version>=3.7"]
build-backend = "maturin"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]